test/Fail/Issue2858-missing.agda
interleaved mutual

  data Nat : Set
  record IsNat (n : Nat) : Set
  isNat : (n : Nat) → IsNat n
